# Formation_C_PlusPLus_Exercice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
A0/: A0.cpp  CMakeLists.txt
A1/: A1.cpp  CMakeLists.txt
A2/: A2  A2.cpp  CMakeLists.txt
A3/: A3  A3.cpp  CMakeLists.txt
A4/: A4  A4.cpp  CMakeLists.txt
B1/: B1.cpp  CMakeLists.txt
B2/: B2.cpp  CMakeLists.txt
B3/: B3.cpp  CMakeLists.txt
B4/: B4.cpp  CMakeLists.txt
B5/: B5.cpp  CMakeLists.txt
B6/: B6.cpp  CMakeLists.txt
C1/: C1.cpp  CMakeLists.txt
C2/: C2.cpp  CMakeLists.txt
C3/: C3.cpp  CMakeLists.txt
C4/: C4.cpp  CMakeLists.txt
C5/: C5.cpp  CMakeLists.txt  tree.cpp  tree.h
C6/: C6.cpp  CMakeLists.txt
C7/: C7.cpp  CMakeLists.txt
C8/: C8.cpp  CMakeLists.txt
D1/: CMakeLists.txt  D1.cpp
D2/: CMakeLists.txt  D2.cpp
D3/: CMakeLists.txt  D3.cpp
D3_Logger/: CMakeLists.txt  Logger.h
E1/: CMakeLists.txt  E1.cpp
E10/: CMakeLists.txt  E10.cpp
E11/: CMakeLists.txt  E11.cpp
E12/: CMakeLists.txt  E12.cpp
E2/: CMakeLists.txt  E2.cpp
E3/: CMakeLists.txt  E3.cpp
E4/: CMakeLists.txt  E4.cpp
E5/: CMakeLists.txt  E5.cpp
E6/: CMakeLists.txt  E6.cpp
E7/: CMakeLists.txt  E7.cpp
E8/: CMakeLists.txt  E8.cpp
E9/: CMakeLists.txt  E9  E9.cpp
F1/: CMakeLists.txt  F1.cpp
F2/: CMakeLists.txt  F2.cpp
F3/: CMakeLists.txt  F3.cpp
F4/: CMakeLists.txt  F4.cpp
G1/: CMakeLists.txt  G1.cpp
G2/: CMakeLists.txt  G2.cpp
G3/: CMakeLists.txt  G3.cpp
G4/: CMakeLists.txt  G4.cpp
